# Aureline

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  gen_community_locale_pack_governance.py  gen_feature_train_compatibility.py  gen_field_readiness_register.py  gen_fitness_surface_register.py  gen_generated_artifact_lineage_surfaces.py  gen_m05_007.py  gen_m05_007_fixtures.py  gen_m05_122.py  gen_m05_123.py  gen_m5_cert_train_register.py  gen_maintenance_truth_register.py  gen_publication_pack_register.py  gen_release_center_visibility_register.py  rust-toolchain.toml
crates/aureline-ai/: Cargo.toml
crates/aureline-ai/examples/: dump_admin_controls_packet.rs  dump_composer_context_evidence_beta.rs  dump_connector_manifest_packet.rs  dump_cost_routing_beta.rs  dump_m5_ai_recall_matrix.rs  dump_m5_lane_certification.rs  dump_m5_memory_class_materialization.rs  dump_m5_recall_row_certification.rs  dump_prompt_composer_conformance.rs  dump_recipe_pack_graduation_packet.rs  dump_retrieval_locality_inspector.rs  dump_tainted_context_beta.rs  dump_user_automation_packet.rs
crates/aureline-ai/src/: lib.rs
crates/aureline-ai/tests/: graph_cue_cross_surface.rs  retrieval_inspector_consumer.rs  workset_scope_beta.rs
crates/aureline-auth/: Cargo.toml
crates/aureline-auth/examples/: dump_approval_ticket_beta_fixtures.rs  dump_deprovision_preserves_fixtures.rs  dump_m5_auth_and_recovery_fixtures.rs  dump_m5_secret_boundary_depth.rs  dump_secret_repair_beta_fixtures.rs
crates/aureline-auth/src/: lib.rs
crates/aureline-auth/tests/: approval_ticket_beta_cases.rs  browser_callback_cases.rs  credential_state_cases.rs  identity_mode_alpha_cases.rs  m5_auth_and_recovery_fixtures.rs  region_tenant_key_mode_beta_cases.rs  restricted_mode_alpha.rs  secret_broker_alpha_cases.rs  secret_broker_beta_cases.rs  secret_repair_beta_cases.rs  system_browser_alpha_cases.rs
crates/aureline-bench/: Cargo.toml  README.md
crates/aureline-bench/src/: buffer.rs  lib.rs  text_stack.rs
crates/aureline-bench/tests/: launch_wedge_budgets.rs
crates/aureline-buffer/: Cargo.toml  README.md
crates/aureline-buffer/src/: content_integrity.rs  lib.rs
crates/aureline-build-farm/: Cargo.toml
crates/aureline-build-farm/src/: lib.rs
crates/aureline-build-farm/tests/: provenance_chain_alpha.rs
crates/aureline-build-info/: Cargo.toml  build.rs
crates/aureline-build-info/src/: lib.rs
crates/aureline-capabilities/: Cargo.toml
crates/aureline-capabilities/src/: lib.rs
crates/aureline-capabilities/tests/: dependency_markers_fixtures.rs  dependency_markers_replay.rs
crates/aureline-chronology/: Cargo.toml
crates/aureline-chronology/examples/: dump_m5_evidence_chronology_lineage.rs
crates/aureline-chronology/src/: lib.rs
crates/aureline-chronology/tests/: chronology_history_row_truth.rs
crates/aureline-cli/: Cargo.toml
crates/aureline-cli/src/: lib.rs
crates/aureline-collab/: Cargo.toml
crates/aureline-collab/src/: lib.rs
crates/aureline-collections/: Cargo.toml
crates/aureline-collections/examples/: dump_m5_assistive_selection_parity.rs  dump_m5_batch_review_sheets.rs  dump_m5_collection_certification.rs  dump_m5_collection_persistence.rs  dump_m5_collection_qualification_matrix.rs  dump_m5_result_scope_counters.rs  dump_m5_scope_receipts.rs  dump_m5_selection_bar_continuity.rs  dump_selection_scope_batch_result_truth.rs  dump_stable_dense_collection_contract.rs
crates/aureline-collections/src/: lib.rs
crates/aureline-collections/tests/: certify_m5_dense_collection_certification.rs  freeze_the_m5_collection_qualification_matrix.rs  selection_scope_batch_result_truth.rs
crates/aureline-commands/: Cargo.toml
crates/aureline-commands/src/: alpha.rs  authority.rs  descriptor.rs  enablement.rs  invocation.rs  lib.rs  registry.rs
crates/aureline-companion/: Cargo.toml
crates/aureline-companion/examples/: dump_companion_continuity_surface.rs  dump_companion_scope_surface.rs  dump_companion_triage_surface.rs  dump_incident_workspace_surface.rs  dump_key_storage_residency_continuity_surface.rs  dump_m5_companion_certification.rs  dump_m5_companion_matrix.rs  dump_managed_sync_maturity_surface.rs  dump_redaction_continuity_offline_packet_surface.rs  dump_runbook_execution_surface.rs  dump_usage_export_offboarding_surface.rs
crates/aureline-companion/src/: lib.rs
crates/aureline-config/: Cargo.toml
crates/aureline-config/src/: lib.rs
crates/aureline-config/tests/: structured_config_artifact_modes_and_layers_fixtures.rs  structured_config_parameter_source_and_round_trip_review_fixtures.rs  structured_config_policy_entitlement_certification_fixtures.rs  structured_editor_qualification_fixtures.rs
crates/aureline-content-safety/: Cargo.toml
crates/aureline-content-safety/src/: content_integrity.rs  detector.rs  lib.rs  records.rs  representation_copy_export.rs  stable_safe_preview_trust.rs  transfer.rs
crates/aureline-content-safety/tests/: content_integrity_beta.rs  representation_copy_export_alpha.rs  representation_labels_beta.rs  stable_safe_preview_trust.rs  suspicious_text_alpha.rs
crates/aureline-continuity/: Cargo.toml
crates/aureline-continuity/src/: lib.rs
crates/aureline-continuity/tests/: connectivity_state_and_deferred_intent.rs
crates/aureline-crash/: Cargo.toml
crates/aureline-crash/src/: incident_trail.rs  lib.rs  symbolication.rs
crates/aureline-crash/tests/: crash_symbolication_alpha.rs  harden_crash_capture_exact_build_symbolication_crash_loop.rs  incident_trail_alpha.rs  symbolication_alpha.rs
crates/aureline-data/: Cargo.toml
crates/aureline-data/src/: database_qualification.rs  (+2 more)
crates/aureline-debug/: Cargo.toml
crates/aureline-deps/: Cargo.toml
crates/aureline-design-system/: Cargo.toml
crates/aureline-docs/: Cargo.toml
crates/aureline-ecosystem/: Cargo.toml
crates/aureline-editor/: Cargo.toml
crates/aureline-extensions/: Cargo.toml
crates/aureline-framework/: Cargo.toml
crates/aureline-git/: Cargo.toml
crates/aureline-graph-proto/: Cargo.toml
crates/aureline-graph-ui/: Cargo.toml
(+18981 files in other folders)
