[workspace]
resolver = "2"
members = [
    "crates/aureline-commands",
    "crates/aureline-shell",
    "crates/aureline-shell-spike",
    "crates/aureline-render",
    "crates/aureline-text",
    "crates/aureline-buffer",
    "crates/aureline-vfs",
    "crates/aureline-rpc",
    "crates/aureline-telemetry",
    "crates/aureline-build-info",
    "crates/aureline-bench",
    "crates/aureline-largefile-proto",
    "crates/aureline-reactive-state",
    "crates/aureline-graph-proto",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/ahmeddyounis/Aureline"
publish = false

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
