[workspace]
resolver = "2"
members = [
    "crates/aureline-records",
    "crates/aureline-commands",
    "crates/aureline-input",
    "crates/aureline-ui",
    "crates/aureline-design-system",
    "crates/aureline-shell",
    "crates/aureline-shell-spike",
    "crates/aureline-editor",
    "crates/aureline-render",
    "crates/aureline-text",
    "crates/aureline-buffer",
    "crates/aureline-content-safety",
    "crates/aureline-history",
    "crates/aureline-recovery",
    "crates/aureline-vfs",
    "crates/aureline-rpc",
    "crates/aureline-telemetry",
    "crates/aureline-build-info",
    "crates/aureline-build-farm",
    "crates/aureline-bench",
    "crates/aureline-largefile-proto",
    "crates/aureline-reactive-state",
    "crates/aureline-graph",
    "crates/aureline-graph-ui",
    "crates/aureline-graph-proto",
    "crates/aureline-governance",
    "crates/aureline-change-objects",
    "crates/aureline-git",
    "crates/aureline-review",
    "crates/aureline-workspace",
    "crates/aureline-settings",
    "crates/aureline-search",
    "crates/aureline-navigation",
    "crates/aureline-language",
    "crates/aureline-terminal",
    "crates/aureline-runtime",
    "crates/aureline-auth",
    "crates/aureline-policy",
    "crates/aureline-crash",
    "crates/aureline-support",
    "crates/aureline-release",
    "crates/aureline-notices",
    "crates/aureline-incident",
    "crates/aureline-doctor",
    "crates/aureline-provider",
    "crates/aureline-extensions",
    "crates/aureline-docs",
    "crates/aureline-i18n",
    "crates/aureline-ai",
    "crates/aureline-preview",
    "crates/aureline-install",
    "crates/aureline-remote",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/ahmeddyounis/Aureline"
publish = false

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package.objc2]
debug-assertions = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
