[package]
name = "aureline-ai"
description = "AI composer and context-inspector seed for the bounded launch AI wedge."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
aureline-commands = { path = "../aureline-commands" }
aureline-docs = { path = "../aureline-docs" }
aureline-graph = { path = "../aureline-graph" }
aureline-runtime = { path = "../aureline-runtime" }
aureline-search = { path = "../aureline-search" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
aureline-graph-proto = { path = "../aureline-graph-proto" }
aureline-review = { path = "../aureline-review" }
