[package]
name = "aureline-auth"
description = "System-browser auth callback seed and local-versus-managed shell vocabulary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
aureline-runtime = { path = "../aureline-runtime" }
aureline-workspace = { path = "../aureline-workspace" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
