[package]
name = "aureline-bench"
description = "Benchmark harness and protected-path trace fixtures."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
