[package]
name = "aureline-bench"
description = "Benchmark harness and protected-path trace fixtures."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "bench_text_stack"
path = "src/bin/bench_text_stack.rs"

[[bin]]
name = "bench_buffer"
path = "src/bin/bench_buffer.rs"

[lints]
workspace = true

[dependencies]
aureline-text = { path = "../aureline-text" }
aureline-buffer = { path = "../aureline-buffer" }
