[package]
name = "aureline-buffer"
description = "Editor buffer core: piece-tree storage, selections, undo/redo."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
