[package]
name = "aureline-buffer"
description = "Editor buffer core: piece-tree storage, selections, undo/redo."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
aureline-content-safety = { path = "../aureline-content-safety" }
serde = { version = "1", features = ["derive"] }
unicode-segmentation = "1.11"
