[package]
name = "aureline-build-info"
description = "Build identity and exact-build identity helpers for runtime, support exports, and provenance-facing stubs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

