[package]
name = "aureline-capabilities"
description = "Capability records and artifact dependency markers for settings, profiles, workflow bundles, portable-state packages, recipes, saved views, migration packets, support exports, and sync artifacts."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
