[package]
name = "aureline-cli"
description = "CLI/headless schema stabilization, machine-readable output contracts, and support/export compatibility promises."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
aureline-release = { path = "../aureline-release" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
