[package]
name = "aureline-collections"
description = "Stable dense-collection contracts for filters, saved views, scope counters, and batch review."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
aureline-search = { path = "../aureline-search" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
