[package]
name = "aureline-commands"
description = "Canonical command descriptor schema and runtime registry."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "aureline_commands"
path = "src/bin/aureline_commands.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

