[package]
name = "aureline-companion"
description = "Frozen M5 companion, incident, sync, residency, and offboarding matrix truth packet with staged rollout lanes for companion, incident, support, diagnostics, and Help/About surfaces."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
aureline-auth = { path = "../aureline-auth" }
aureline-provider = { path = "../aureline-provider" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
