[package]
name = "aureline-config"
description = "Structured config, manifest, environment-file, and effective/live truth contracts."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "aureline_config_structured_editor_qualification"
path = "src/bin/aureline_config_structured_editor_qualification.rs"

[[bin]]
name = "aureline_config_structured_policy_entitlement_matrix"
path = "src/bin/aureline_config_structured_policy_entitlement_matrix.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
