[package]
name = "aureline-debug"
description = "Debug-session chronology, replay support class truth, and capability descriptor contracts for local, remote/helper, container, and notebook-bridge debug lanes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
