[package]
name = "aureline-deps"
description = "Dependency, security, compliance, and export-truth types for advisory, license, suppression, SBOM, and lockfile-risk surfaces."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
