[package]
name = "aureline-design-system"
description = "Governed design-system beta contracts for component state, appearance, screenshot diff, and token conformance."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "aureline_design_system_beta_contract"
path = "src/bin/aureline_design_system_beta_contract.rs"

[lints]
workspace = true

[dependencies]
aureline-ui = { path = "../aureline-ui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
