[package]
name = "aureline-docs"
description = "Docs-node identity and citation evidence primitives for docs, help, explainers, onboarding, and AI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
