[package]
name = "aureline-docs"
description = "Docs-node identity and citation evidence primitives for docs, help, explainers, onboarding, and AI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "aureline_docs_locale_overlay_beta"
path = "src/bin/aureline_docs_locale_overlay_beta.rs"

[[bin]]
name = "aureline_docs_preview_and_maintenance_beta"
path = "src/bin/aureline_docs_preview_and_maintenance_beta.rs"

[[bin]]
name = "aureline_docs_browser_truth_packet"
path = "src/bin/aureline_docs_browser_truth_packet.rs"

[[bin]]
name = "aureline_docs_pack_truth_packet"
path = "src/bin/aureline_docs_pack_truth_packet.rs"

[[bin]]
name = "aureline_docs_maintenance_governance"
path = "src/bin/aureline_docs_maintenance_governance.rs"

[[bin]]
name = "aureline_stable_docs_contract"
path = "src/bin/aureline_stable_docs_contract.rs"

[[bin]]
name = "aureline_docs_pack_recall"
path = "src/bin/aureline_docs_pack_recall.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
