[package]
name = "aureline-editor"
description = "Editor viewport model, compositor, and paint pipeline."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
aureline-buffer = { path = "../aureline-buffer" }
aureline-history = { path = "../aureline-history" }
aureline-language = { path = "../aureline-language" }
aureline-recovery = { path = "../aureline-recovery" }
aureline-render = { path = "../aureline-render" }
aureline-text = { path = "../aureline-text" }
aureline-ui = { path = "../aureline-ui" }
aureline-vfs = { path = "../aureline-vfs" }
aureline-workspace = { path = "../aureline-workspace" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "=0.24.7"
unicode-segmentation = "1"

[dev-dependencies]
font-test-data = "0.4"
