[package]
name = "aureline-extensions"
description = "Extension-manifest baseline, effective-permission summary, and install / review decision validator for the first ecosystem-bearing lane."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
