[package]
name = "aureline-framework"
description = "Framework-aware tooling support strips, exact-vs-heuristic row certainty, convention-diagnostic rows, and review-first generator/codemod previews."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_yaml = "0.9"
