[package]
name = "aureline-git"
description = "Git service alpha for repository status, branch identity, and launch-wedge change discovery."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "aureline_git_status"
path = "src/bin/aureline_git_status.rs"

[[bin]]
name = "aureline_git_mutation"
path = "src/bin/aureline_git_mutation.rs"

[[bin]]
name = "aureline_git_commit"
path = "src/bin/aureline_git_commit.rs"

[[bin]]
name = "aureline_git_branch"
path = "src/bin/aureline_git_branch.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_yaml = "0.9"
tempfile = "3"
