[package]
name = "aureline-graph-proto"
description = "Semantic-workspace-graph seed prototype. Mirrors the node-class, edge-class, evidence-state, provenance, freshness, confidence, query-family, shard-affinity, invalidation-producer, topology-edge, impact-reason, and explainer-citation vocabularies frozen in docs/graph/workspace_graph_seed.md and schemas/graph/workspace_graph_seed.schema.json, and enforces the identity / label rules the doc names against the fixtures under fixtures/graph/example_workspace_graphs/."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "graph_proto"
path = "src/bin/graph_proto.rs"

[lints]
workspace = true

[dependencies]
