[package]
name = "aureline-graph-ui"
description = "Graph understanding surface projections for topology, impact, and cited explainers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
aureline-graph = { path = "../aureline-graph" }
aureline-graph-proto = { path = "../aureline-graph-proto" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
